OV-717: Update dependencies. Move from Java24 to Java25. (#222)